Inverted x/y for the MazeEvent calls and building the Vector3  elements of the Terrain and voila!  it all works correctly.

--- a/basin/Basin3d.html
+++ b/basin/Basin3d.html
@@ -78,7 +78,7 @@
             for ( var i = 0; i < nCells*2+1; i++ ) {
                 terrain[i] = [];
                 for ( var j = 0; j < nCells*2+1; j++ ) {
-                    terrain[i][j] = new THREE.Vector3(j, -1, i);
+                    terrain[i][j] = new THREE.Vector3(i, -1, j);
                 }
             }
         }
