Fixed bug in Basin3D:computeElev where the test for the northwest point was incorrect.

--- a/basin/Basin3d.html
+++ b/basin/Basin3d.html
@@ -22,7 +22,7 @@
 	</head>
 	<body style="margin:0;padding:0;border:0">
     <script type="text/javascript">
-        var NCELLS = 32;
+        var NCELLS = 4;
         var plane;
         var terrain = [];
         var basin;
@@ -145,37 +145,37 @@
             terrain[it][jt].y = cell.chanElev;
 
             // next, check each edge and see if this cell has a stream to the next
-            // if so, simply interpolate between the two heights
-            computeStreamElev( bounds, cell, i, j, it, jt );
+            // if so, simply interpolate between the two slopes
+            computeStreamElev( bounds, cell, i, j );
 
             // now check the other interpolated points
-            computeElevBounds( i, j );
+            computeElevBounds( bounds, i, j );
         }
 
         /**
          * Compute the interpolated elevation of any streams entering or leaving the cell
          */
         function computeStreamElev ( bounds, cell, i, j ) {
-            var it = i * 2;
-            var jt = j * 2;
+            var it = i * 2 + 1 ;
+            var jt = j * 2 + 1;
 
             if ((bounds & MAZE.SOUTH_BIT) === 0 ) {
-                terrain[it][jt+1].y = (cell.chanElev + basin.geos[i +
+                terrain[it-1][jt].y = (cell.chanElev + basin.geos[i +
                 MAZE.YEdge[MAZE.SOUTH]][j+ MAZE.XEdge[MAZE.SOUTH]].chanElev) / 2;
             }
 
             if ((bounds & MAZE.WEST_BIT) === 0 ) {
-                terrain[it+1][jt].y = (cell.chanElev + basin.geos[i +
+                terrain[it][jt-1].y = (cell.chanElev + basin.geos[i +
                 MAZE.YEdge[MAZE.WEST]][j+ MAZE.XEdge[MAZE.WEST]].chanElev) / 2;
             }
 
             if ((bounds & MAZE.NORTH_BIT) === 0 ) {
-                terrain[it+2][jt+1].y = (cell.chanElev + basin.geos[i +
+                terrain[it+1][jt].y = (cell.chanElev + basin.geos[i +
                 MAZE.YEdge[MAZE.NORTH]][j+ MAZE.XEdge[MAZE.NORTH]].chanElev) / 2;
             }
 
             if ((bounds & MAZE.EAST_BIT) === 0 ) {
-                terrain[it+1][jt+2].y = (cell.chanElev + basin.geos[i +
+                terrain[it][jt+1].y = (cell.chanElev + basin.geos[i +
                 MAZE.YEdge[MAZE.EAST]][j+ MAZE.XEdge[MAZE.EAST]].chanElev) / 2;
             }
         }
@@ -185,106 +185,114 @@
          *  the cell.  Some, e.g. if there is a stream entering or exiting, will already be computed
          *  so they won't be -1 and can be skipped
          */
-        function computeElevBounds ( i, j ) {
+        function computeElevBounds ( bounds, i, j ) {
             var offset =
                 [
-                    { i : -1, j: 0 },   // south
-                    { i : -1, j: -1 },
-                    { i : 0, j: -1 },   // west
-                    { i : 1, j: -1 },
-                    { i : 1, j: 0 },    // north
-                    { i : 1, j: 1 },
-                    { i : 0, j: 1 },    // east
-                    { i : -1, j: 1 }
+                    { i: -1, j:  0 },   // south
+                    { i: -1, j: -1 },
+                    { i:  0, j: -1 },   // west
+                    { i:  1, j: -1 },
+                    { i:  1, j:  0 },   // north
+                    { i:  1, j:  1 },
+                    { i:  0, j:  1 },   // east
+                    { i: -1, j:  1 }
                 ];
 
             try {
 
 
-            var heights = [];
+            var slopes = [];
             var it,jt;
             var rowLim = basin.maze.row - 1;
             var colLim = basin.maze.col - 1;
             var tRowLim = terrain.length;
             var tColLim = terrain[0].length;
+            var base = basin.geos[i][j].chanElev;
 
             for ( var n=0; n<8; n++ ) {
                 it = i * 2 + offset[n].i + 1;
                 jt = j * 2 + offset[n].j + 1;
 
-                if (it >= 0 && it < tRowLim && jt >= 0 && jt < tColLim && terrain[it][jt].y < 0) {
+                // if the current point is a stream, then obviously it's not an interfluve
+                var bStream = ((bounds & MAZE.SOUTH_BIT) === 0 && n === 0 ) ||
+                              ((bounds & MAZE.WEST_BIT) === 0 && n === 2 ) ||
+                              ((bounds & MAZE.NORTH_BIT) === 0 && n === 4 ) ||
+                              ((bounds & MAZE.EAST_BIT) === 0 && n === 6 );
+
+                if (it >= 0 && it < tRowLim && jt >= 0 && jt < tColLim && !bStream)  {
 
                     switch (n) {
                         case 0:     // south
-                            if (i !== 0) {
-                                heights.push(basin.geos[i - 1][j].chanElev);
+                            if (i !== 0 ) {
+                                slopes.push(basin.geos[i - 1][j].chanSlope);
                             }
                             break;
                         case 1:     // southwest
                             if (i !== 0 && j !== 0) {
-                                heights.push(basin.geos[i - 1][j - 1].chanElev);
+                                slopes.push(basin.geos[i - 1][j - 1].chanSlope);
                             }
                             if (j !== 0) {
-                                heights.push(basin.geos[i][j - 1].chanElev);
+                                slopes.push(basin.geos[i][j - 1].chanSlope);
                             }
                             if (i !== 0) {
-                                heights.push(basin.geos[i - 1][j].chanElev);
+                                slopes.push(basin.geos[i - 1][j].chanSlope);
                             }
                             break;
                         case 2:     // west
-                            if (j !== 0) {
-                                heights.push(basin.geos[i][j - 1].chanElev);
+                            if (j !== 0 ) {
+                                slopes.push(basin.geos[i][j - 1].chanSlope);
                             }
                             break;
                         case 3:     // northwest
-                            if (j !== 0) {
-                                heights.push(basin.geos[i - 1][j].chanElev);
+                            if (i !== 0) {
+                                slopes.push(basin.geos[i - 1][j].chanSlope);
                             }
                             if (i !== rowLim && j !== 0) {
-                                heights.push(basin.geos[i + 1][j - 1].chanElev);
+                                slopes.push(basin.geos[i + 1][j - 1].chanSlope);
                             }
                             if (i !== rowLim) {
-                                heights.push(basin.geos[i + 1][j].chanElev);
+                                slopes.push(basin.geos[i + 1][j].chanSlope);
                             }
                             break;
                         case 4:     // north
-                            if (i !== rowLim) {
-                                heights.push(basin.geos[i + 1][j].chanElev);
+                            if (i !== rowLim ) {
+                                slopes.push(basin.geos[i + 1][j].chanSlope);
                             }
                             break;
                         case 5:     // northeast
                             if (i !== rowLim) {
-                                heights.push(basin.geos[i + 1][j].chanElev);
+                                slopes.push(basin.geos[i + 1][j].chanSlope);
                             }
                             if (j !== colLim) {
-                                heights.push(basin.geos[i][j + 1].chanElev);
+                                slopes.push(basin.geos[i][j + 1].chanSlope);
                             }
                             if (i !== rowLim && j !== colLim) {
-                                heights.push(basin.geos[i + 1][j + 1].chanElev);
+                                slopes.push(basin.geos[i + 1][j + 1].chanSlope);
                             }
                             break;
                         case 6:     // east
-                            // if we're not on the eastern rim of the catchment
-                            if (j !== colLim) {
-                                heights.push(basin.geos[i][j + 1].chanElev);
+                            if (j !== colLim ) {
+                                slopes.push(basin.geos[i][j + 1].chanSlope);
                             }
                             break;
                         case 7:     // southeast
                             if (i !== rowLim) {
-                                heights.push(basin.geos[i + 1][j].chanElev);
+                                slopes.push(basin.geos[i + 1][j].chanSlope);
                             }
                             if (j !== colLim) {
-                                heights.push(basin.geos[i][j + 1].chanElev);
+                                slopes.push(basin.geos[i][j + 1].chanSlope);
                             }
                             if (i !== 0 && j !== colLim) {
-                                heights.push(basin.geos[i - 1][j + 1].chanElev);
+                                slopes.push(basin.geos[i - 1][j + 1].chanSlope);
                             }
                             break;
                     }
 
-                    heights.push(basin.geos[i][j].chanElev);
+                    slopes.push(basin.geos[i][j].chanSlope);
 
-                    terrain[it][jt].y = interfluveHeight(heights);
+                    terrain[it][jt].y = Math.max( terrain[it][jt].y, interfluveHeight(slopes, base));
+                    if (terrain[it][jt].y < 0)
+                        debugger;
                 }
             }
             }
@@ -293,15 +301,15 @@
             }
         }
 
-        function interfluveHeight ( heights ) {
-            var n = heights.length;
+        function interfluveHeight ( slopes, base ) {
+            var n = slopes.length;
             var h = 0;
 
-            while (heights.length > 0) {
-                h += heights.pop();
+            while (slopes.length > 0) {
+                h = Math.max(h, slopes.pop());
             }
 
-            return h / n * 2;
+            return h * 2 + base;
         }
 
         /**
@@ -361,8 +369,8 @@
             var material = new THREE.LineBasicMaterial({ color: 0x0000ff });
 
             var geometry = new THREE.Geometry();
-            geometry.vertices.push(new THREE.Vector3(2 * i + 1 - NCELLS, 2, 2 * j + 1 - NCELLS));
-            geometry.vertices.push(new THREE.Vector3(2 * nexi + 1-NCELLS, 2, 2 * nexj + 1 - NCELLS));
+            geometry.vertices.push(new THREE.Vector3(2 * i + 1 - NCELLS, 3, 2 * j + 1 - NCELLS));
+            geometry.vertices.push(new THREE.Vector3(2 * nexi + 1-NCELLS, 3, 2 * nexj + 1 - NCELLS));
 
             var line = new THREE.Line(geometry, material);
 
